Update one ring to use hot reload build system.
Gitingore dist folder

Capitalize pipe class.

Add documentation links to esbuild.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,24 +1,34 @@
 {
   "compilerOptions": {
+    "allowJs": true,
+    "allowSyntheticDefaultImports": true,
     "baseUrl": ".",
+    "esModuleInterop": true,
+    "importHelpers": true,
     "inlineSourceMap": true,
     "inlineSources": true,
-    "module": "ESNext",
-    "target": "ES6",
-    "allowJs": true,
-    "noImplicitAny": true,
-    "moduleResolution": "node",
-    "importHelpers": true,
-    "isolatedModules": true,
-	"strictNullChecks": true,
     "lib": [
-      "DOM",
-      "ES5",
-      "ES6",
-      "ES7"
+      "dom",
+      "ES2022"
+    ],
+    "module": "ESNext",
+    "moduleResolution": "Node",
+    "noImplicitAny": true,
+    "resolveJsonModule": true,
+    "target": "ESNext",
+    "typeRoots": [
+      "./typings",
+      "./node_modules/@types",
+      "./node_modules/obsidian",
+      "./node_modules/@codemirror/state/dist"
     ]
   },
+  "exclude": [
+    "node_modules"
+  ],
   "include": [
-    "**/*.ts"
+    "src/**/*.ts",
+    "./fophidian.ts",
+    "./typings/index.d.ts"
   ]
 }
