--- a/package.json
+++ b/package.json
@@ -1,24 +1,50 @@
 {
-	"name": "obsidian-sample-plugin",
-	"version": "1.0.0",
-	"description": "This is a sample plugin for Obsidian (https://obsidian.md)",
-	"main": "main.js",
-	"scripts": {
-		"dev": "node esbuild.config.mjs",
-		"build": "tsc -noEmit -skipLibCheck && node esbuild.config.mjs production",
-		"version": "node version-bump.mjs && git add manifest.json versions.json"
-	},
-	"keywords": [],
 	"author": "",
-	"license": "MIT",
+	"cspell": {
+		"ignorePaths": [
+			"./fophidian.ts",
+			"package.json",
+			"tsconfig.json"
+		],
+		"words": [
+			"todos",
+			"codemirror",
+			"Lukas Mölschl"
+		]
+	},
+	"description": "This is a sample plugin for Obsidian (https://obsidian.md)",
 	"devDependencies": {
-		"@types/node": "^16.11.6",
+		"@codemirror/state": "^6.3.0",
+		"@codemirror/view": "^6.21.3",
+		"@types/codemirror": "^5.60.10",
+		"@types/fs-extra": "^11.0.2",
+		"@types/node": "^20.8.6",
 		"@typescript-eslint/eslint-plugin": "5.29.0",
 		"@typescript-eslint/parser": "5.29.0",
-		"builtin-modules": "3.3.0",
-		"esbuild": "0.17.3",
+		"builtin-modules": "^3.3.0",
+		"copy-newer": "^2.1.2",
+		"dotenv": "^16.3.1",
+		"esbuild": "^0.19.4",
+		"esbuild-plugin-copy": "^2.1.1",
+		"esbuild-sass-plugin": "^2.16.0",
+		"eslint": "^8.52.0",
+		"fs-extra": "^11.1.1",
+		"moment": "2.29.4",
 		"obsidian": "latest",
-		"tslib": "2.4.0",
+		"sass": "^1.69.3",
+		"tslib": "^2.6.2",
+		"tsx": "^3.13.0",
 		"typescript": "4.7.4"
-	}
+	},
+	"keywords": [],
+	"license": "MIT",
+	"main": "src/main.ts",
+	"name": "obsidian-sample-plugin",
+	"scripts": {
+		"build:es": "tsx ./esbuild.config.ts prod",
+		"dev": "tsx ./esbuild.config.ts",
+		"dev:live": "tsx ./esbuild.config.ts livedev",
+		"tsx": "tsx"
+	},
+	"version": "1.0.0"
 }
