Make a good faith effort in making my own recursive json to yaml converter.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,10 @@
       "./node_modules/@types",
       "./node_modules/obsidian",
       "./node_modules/@codemirror/state/dist"
+    ],
+    "types": [
+      "jest",
+      "node",
     ]
   },
   "exclude": [
