--- a/package.json
+++ b/package.json
@@ -18,20 +18,23 @@
 		"@codemirror/view": "^6.21.3",
 		"@types/codemirror": "^5.60.10",
 		"@types/fs-extra": "^11.0.2",
+		"@types/jest": "^29.5.6",
 		"@types/node": "^20.8.6",
 		"@typescript-eslint/eslint-plugin": "5.29.0",
 		"@typescript-eslint/parser": "5.29.0",
 		"builtin-modules": "^3.3.0",
 		"copy-newer": "^2.1.2",
 		"dotenv": "^16.3.1",
-		"esbuild": "^0.19.4",
+		"esbuild": "^0.19.5",
 		"esbuild-plugin-copy": "^2.1.1",
 		"esbuild-sass-plugin": "^2.16.0",
 		"eslint": "^8.52.0",
 		"fs-extra": "^11.1.1",
+		"jest": "^29.7.0",
 		"moment": "2.29.4",
 		"obsidian": "latest",
 		"sass": "^1.69.3",
+		"ts-jest": "^29.1.1",
 		"tslib": "^2.6.2",
 		"tsx": "^3.13.0",
 		"typescript": "4.7.4"
@@ -41,6 +44,8 @@
 	"main": "src/main.ts",
 	"name": "obsidian-sample-plugin",
 	"scripts": {
+		"test": "jest --ci",
+		"test:watch": "jest --watch",
 		"build:es": "tsx ./esbuild.config.ts prod",
 		"dev": "tsx ./esbuild.config.ts",
 		"dev:live": "tsx ./esbuild.config.ts livedev",
