--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"@types/codemirror": "^5.60.10",
 		"@types/fs-extra": "^11.0.2",
 		"@types/jest": "^29.5.6",
+		"@types/js-yaml": "^4.0.8",
 		"@types/node": "^20.8.6",
 		"@typescript-eslint/eslint-plugin": "5.29.0",
 		"@typescript-eslint/parser": "5.29.0",
@@ -45,11 +46,14 @@
 	"name": "obsidian-sample-plugin",
 	"scripts": {
 		"test": "jest --ci",
-		"test:watch": "jest --watch",
+		"test:watch": "NODE_ENV=test jest --watch",
 		"build:es": "tsx ./esbuild.config.ts prod",
 		"dev": "tsx ./esbuild.config.ts",
 		"dev:live": "tsx ./esbuild.config.ts livedev",
 		"tsx": "tsx"
 	},
-	"version": "1.0.0"
+	"version": "1.0.0",
+	"dependencies": {
+		"js-yaml": "^4.1.0"
+	}
 }
