--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
 		"ts-jest": "^29.1.1",
 		"tslib": "^2.6.2",
 		"tsx": "^3.13.0",
-		"typescript": "4.7.4"
+		"typescript": "4.7.4",
+		"yaml": "^2.3.3"
 	},
 	"keywords": [],
 	"license": "MIT",
