--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,11 @@
 {
-	"id": "obsidian-onering-plugin",
-	"name": "Onering Plugin",
+	"id": "obsidian-sort-frontmatter",
+	"name": "Sort Frontmatter",
 	"version": "1.0.0",
 	"minAppVersion": "0.15.0",
-	"description": "This is a sample plugin for Obsidian. This plugin demonstrates some of the capabilities of the Obsidian API.",
-	"author": "Obsidian",
-	"authorUrl": "https://obsidian.md",
+	"description": "Sort frontmatter recursively",
+	"author": "Kanzi",
+	"authorUrl": "mariomui.me",
 	"fundingUrl": "https://obsidian.md/pricing",
-	"isDesktopOnly": false
+	"isDesktopOnly": true
 }
