--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
 		],
 		"words": [
 			"todos",
-			"codemirror",
-			"Lukas Mölschl"
+			"codemirror"
 		]
 	},
 	"description": "This is a sample plugin for Obsidian (https://obsidian.md)",
