--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,7 +19,7 @@ jobs:
         name: Install pnpm
         with:
           version: 8
-          run_install: false
+          run_install: true
 
       - name: Build plugin
         run: |
