--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -6,25 +6,29 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-20.04
-    strategy:
-      matrix:
-        node-version: [18]
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
-
-      - name: Install pnpm
-        uses: pnpm/action-setup@v2
+        uses: actions/checkout@v3.5.3
+      - name: Install Node.js
+        uses: actions/setup-node@v3.6.0
+        with:
+          node-version: 20
+      - uses: pnpm/action-setup@v2.2.4
+        name: Install pnpm
+        id: pnpm-install
         with:
           version: 8
-
-      - name: Setup node
-        uses: actions/setup-node@v3
+          run_install: false
+      - name: Get pnpm store directory
+        id: pnpm-cache
+        run: |
+          echo "pnpm_cache_dir=$(pnpm store path)" >> $GITHUB_OUTPUT
+      - uses: actions/cache@v3.3.1
+        name: Setup pnpm cache
         with:
-          node-version: ${{ matrix.node-version }}
-          cache: "pnpm"
-
+          path: ${{ steps.pnpm-cache.outputs.pnpm_cache_dir }}
+          key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
       - name: Build plugin
         run: |
           pnpm install --no-frozen-lockfile
