--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
 		"test": "jest --ci",
 		"test:watch": "NODE_ENV=test jest --watch",
 		"build": "tsx -- esbuild.config.ts prod",
+		"checkpath": "ls -la",
 		"dev": "tsx ./esbuild.config.ts",
 		"dev:live": "tsx ./esbuild.config.ts livedev",
 		"tsx": "tsx",
