--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 		"@typescript-eslint/parser": "5.29.0",
 		"builtin-modules": "^3.3.0",
 		"copy-newer": "^2.1.2",
+		"dedent": "^1.5.1",
 		"dotenv": "^16.3.1",
 		"esbuild": "^0.19.5",
 		"esbuild-plugin-copy": "^2.1.1",
