Change version logic.

--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
 		"dev": "tsx ./esbuild.config.ts",
 		"dev:live": "tsx ./esbuild.config.ts livedev",
 		"tsx": "tsx",
-		"version": "node ./version-bump.mjs"
+		"preversion": "node ./version-bump.mjs"
 	},
 	"version": "1.0.24",
 	"dependencies": {
